# media-player-refactoring-python-kata

./: README.md  media_player.py  pyproject.toml  test_media_player.py
